// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  Object {
    "prop": "node",
    "type": "BinaryTree",
  },
  Object {
    "prop": "left",
    "type": "BinaryTree",
  },
  Object {
    "prop": "right",
    "type": "BinaryTree",
  },
  Object {
    "prop": "a",
    "type": "DeepOnly",
  },
  Object {
    "prop": "b",
    "type": "DeepOnly",
  },
  Object {
    "prop": "id",
    "type": "Recursive",
  },
  Object {
    "prop": "next",
    "type": "Recursive",
  },
  Object {
    "prop": "a",
    "type": "ShallowOnly",
  },
  Object {
    "prop": "b",
    "type": "ShallowOnly",
  },
]
`;

exports[` 2`] = `
Array [
  Object {
    "d": 2,
    "n": "BinaryTree",
    "s": 1,
  },
  Object {
    "d": 2,
    "n": "DeepOnly",
    "s": 0,
  },
  Object {
    "d": 1,
    "n": "Recursive",
    "s": 1,
  },
  Object {
    "d": 0,
    "n": "ShallowOnly",
    "s": 2,
  },
]
`;

exports[` 3`] = `
Array [
  Object {
    "deepProps": Array [
      Object {
        "id": Object {
          "prop": "left",
          "type": "BinaryTree",
        },
        "shallow": false,
        "type": "BinaryTree",
        "wrap": [Function],
      },
      Object {
        "id": Object {
          "prop": "right",
          "type": "BinaryTree",
        },
        "shallow": false,
        "type": "BinaryTree",
        "wrap": [Function],
      },
    ],
    "shallowProps": Array [
      Object {
        "id": Object {
          "prop": "node",
          "type": "BinaryTree",
        },
        "shallow": true,
        "type": "String",
        "wrap": [Function],
      },
    ],
    "type": "BinaryTree",
  },
  Object {
    "deepProps": Array [
      Object {
        "id": Object {
          "prop": "a",
          "type": "DeepOnly",
        },
        "shallow": false,
        "type": "ShallowOnly",
        "wrap": [Function],
      },
      Object {
        "id": Object {
          "prop": "b",
          "type": "DeepOnly",
        },
        "shallow": false,
        "type": "ShallowOnly",
        "wrap": [Function],
      },
    ],
    "shallowProps": Array [],
    "type": "DeepOnly",
  },
  Object {
    "deepProps": Array [
      Object {
        "id": Object {
          "prop": "next",
          "type": "Recursive",
        },
        "shallow": false,
        "type": "Recursive",
        "wrap": [Function],
      },
    ],
    "shallowProps": Array [
      Object {
        "id": Object {
          "prop": "id",
          "type": "Recursive",
        },
        "shallow": true,
        "type": "ID",
        "wrap": [Function],
      },
    ],
    "type": "Recursive",
  },
  Object {
    "deepProps": Array [],
    "shallowProps": Array [
      Object {
        "id": Object {
          "prop": "a",
          "type": "ShallowOnly",
        },
        "shallow": true,
        "type": "String",
        "wrap": [Function],
      },
      Object {
        "id": Object {
          "prop": "b",
          "type": "ShallowOnly",
        },
        "shallow": true,
        "type": "Number",
        "wrap": [Function],
      },
    ],
    "type": "ShallowOnly",
  },
]
`;
